--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S530.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S530.xaml
@@ -283,47 +283,39 @@
 		<Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="646,495,0,0" VerticalAlignment="Top" Width="60" Height="60"/>
 		<Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="742,495,0,0" VerticalAlignment="Top" Width="60" Height="60"/>
 		<Machines:DRY_HeatingBattery HorizontalAlignment="Left" Margin="837,496,0,0" VerticalAlignment="Top" Width="60" Height="60"/>
-		<Rectangle HorizontalAlignment="Left" Height="90" Margin="946,431,0,0" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Fill="Black">
-			<d:Rectangle.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform AngleY="0"/>
-					<RotateTransform/>
-					<TranslateTransform Y="0"/>
-				</TransformGroup>
-			</d:Rectangle.RenderTransform>
-		</Rectangle>
+        <Rectangle HorizontalAlignment="Left" Height="90" Margin="946,431,0,0" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Fill="Black">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleY="1.591"/>
+                    <RotateTransform/>
+                    <TranslateTransform Y="0.014"/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
 		<Ellipse HorizontalAlignment="Left" Height="16" Margin="939,518,0,0" VerticalAlignment="Top" Width="16" Fill="#FFD1D1D1"/>
 		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="545,471,0,0" VerticalAlignment="Top" Height="71" Width="69"/>
 		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1204,301,0,0" VerticalAlignment="Top" Height="48" Width="63"/>
-		<Rectangle HorizontalAlignment="Left" Height="36" Margin="1336,326,0,0" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Fill="Black">
-			<d:Rectangle.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform AngleY="0"/>
-					<RotateTransform/>
-					<TranslateTransform Y="0"/>
-				</TransformGroup>
-			</d:Rectangle.RenderTransform>
-		</Rectangle>
+        <Rectangle HorizontalAlignment="Left" Height="36" Margin="1336,326,0,0" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Fill="Black">
+        </Rectangle>
 		<Machines:Waste HorizontalAlignment="Left" Margin="1209,371,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
 		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1204,718,0,0" VerticalAlignment="Top" Height="58" Width="70"/>
 		<Machines:VS_Airlock HorizontalAlignment="Left" Margin="1200,608,0,0" VerticalAlignment="Top" Height="64" Width="62"/>
-		<Rectangle HorizontalAlignment="Left" Height="2" Margin="1133,753,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
-			<d:Rectangle.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform ScaleY="-1"/>
-					<SkewTransform/>
-					<RotateTransform Angle="90"/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</d:Rectangle.RenderTransform>
-		</Rectangle>
+        <Rectangle HorizontalAlignment="Left" Height="2" Margin="1133,753,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
 		<Labels:JumpLabel HorizontalAlignment="Left" 
           Margin="60,89,0,0" 
           VerticalAlignment="Top" 
           JumpFromLabel="460-01-MA1" 
-          JumpToLabel="456-01-MA1"/>
+          JumpToLabel="455-01-MA1"/>
 		<Labels:JumpLabel HorizontalAlignment="Left" 
           Margin="1292,732,0,0" 
           VerticalAlignment="Top" 
