--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S810.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S810.xaml
@@ -231,38 +231,38 @@
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="387,618,0,0" VerticalAlignment="Top" Height="70" Width="71"/>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="396,729,0,0" VerticalAlignment="Top" Height="67" Width="67"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="329,770,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
-            <d:Rectangle.RenderTransform>
+            <Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </d:Rectangle.RenderTransform>
+            </Rectangle.RenderTransform>
         </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="392,97,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
-            <d:Rectangle.RenderTransform>
+            <Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </d:Rectangle.RenderTransform>
+            </Rectangle.RenderTransform>
         </Rectangle>
         <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="1193,337,0,0" VerticalAlignment="Top"/>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="878,483,0,0" VerticalAlignment="Top" Height="150" Width="158"/>
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="1127,574,0,0" VerticalAlignment="Top" Height="70" Width="71"/>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="1137,685,0,0" VerticalAlignment="Top" Height="67" Width="67"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="1069,726,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
-            <d:Rectangle.RenderTransform>
+            <Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </d:Rectangle.RenderTransform>
+            </Rectangle.RenderTransform>
         </Rectangle>
         <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Left" Margin="749,546,0,0" VerticalAlignment="Top" Height="125" Width="140" RenderTransformOrigin="0.5,0.5">
             <Machines:SCW_ScrewConveyor_inclined.RenderTransform>
