--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/S880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/S880.xaml
@@ -278,14 +278,14 @@
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="292,705,0,0" VerticalAlignment="Top" Height="70" Width="66"/>
         <Machines:VS_Airlock HorizontalAlignment="Left" Margin="290,600,0,0" VerticalAlignment="Top" Height="64" Width="62"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="222,745,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
-            <d:Rectangle.RenderTransform>
+            <Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </d:Rectangle.RenderTransform>
+            </Rectangle.RenderTransform>
         </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="125" Margin="253,271,0,0" VerticalAlignment="Top" Width="202" Fill="Gray" RadiusX="15" RadiusY="15"/>
         <Rectangle HorizontalAlignment="Left" Height="84" Margin="354,187,0,0" VerticalAlignment="Top" Width="76" Fill="Gray" RadiusX="15" RadiusY="15"/>
@@ -316,14 +316,14 @@
         <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="1022,570,0,0" VerticalAlignment="Top" Height="149" Width="129"/>
         <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="1116,570,0,0" VerticalAlignment="Top" Height="149" Width="129"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="294,332,0,0" Stroke="Black" VerticalAlignment="Top" Width="119" RenderTransformOrigin="0.5,0.5">
-            <d:Rectangle.RenderTransform>
+            <Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </d:Rectangle.RenderTransform>
+            </Rectangle.RenderTransform>
         </Rectangle>
         <Machines:DV_Diverter_T HorizontalAlignment="Left" Margin="1098,494,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="81" Width="73">
             <Machines:DV_Diverter_T.RenderTransform>
@@ -389,7 +389,7 @@
             VerticalAlignment="Top" 
             ComponentName="880-61-LEV"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="410,204,0,0" 
+            Margin="410,210,0,0" 
             VerticalAlignment="Top" 
             ComponentName="880-62-LEV"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -416,17 +416,17 @@
             Margin="964,552,0,0" 
             VerticalAlignment="Top" 
             ComponentName="997-21-CV1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1135,209,0,0" VerticalAlignment="Top" Width="112" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="900-71-ECS2" PipeHeight="Medium"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1135,209,0,0" VerticalAlignment="Top" Width="110" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="900-71-ECS2" PipeHeight="Medium"/>
         <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="1085,164,0,0" VerticalAlignment="Top"/>
-        <Rectangle HorizontalAlignment="Left" Height="5" Margin="1180,193,0,0" Stroke="Black" VerticalAlignment="Top" Width="130" RenderTransformOrigin="0.5,0.5" Fill="Black">
-            <d:Rectangle.RenderTransform>
+        <Rectangle HorizontalAlignment="Left" Height="5" Margin="1180,203,0,0" Stroke="Black" VerticalAlignment="Top" Width="130" RenderTransformOrigin="0.5,0.5" Fill="Black">
+            <Rectangle.RenderTransform>
                 <TransformGroup>
-                    <ScaleTransform ScaleY="-1"/>
+                    <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </d:Rectangle.RenderTransform>
+            </Rectangle.RenderTransform>
         </Rectangle>
         <Machines:External HorizontalAlignment="Left" Margin="1209,80,0,0" VerticalAlignment="Top" Height="74" Width="72"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
