--- a/Prevu.Drawings/Machines/VB_VibratingScreen.xaml
+++ b/Prevu.Drawings/Machines/VB_VibratingScreen.xaml
@@ -4,44 +4,45 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
-             mc:Ignorable="d" Width="100" Height="100">
-  <Viewbox  Stretch="Uniform">
-    <Canvas Name="svg16" Width="100" Height="100">
-      <Path  Name="path2" Stroke="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}">
-        <Path.Data>
-          <PathGeometry Figures="M25 41L29.7679 42.9072C29.8517 42.9407 29.8517 43.0593 29.7679 43.0928L25.2321 44.9072C25.1483 44.9407 25.1483 45.0593 25.2321 45.0928L29.7679 46.9072C29.8517 46.9407 29.8517 47.0593 29.7679 47.0928L25.2321 48.9072C25.1483 48.9407 25.1483 49.0593 25.2321 49.0928L30 51" FillRule="NonZero"/>
-        </Path.Data>
-      </Path>
-      <Path  Name="path4" Stroke="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}">
-        <Path.Data>
-          <PathGeometry Figures="M40 41L44.7679 42.9072C44.8517 42.9407 44.8517 43.0593 44.7679 43.0928L40.2321 44.9072C40.1483 44.9407 40.1483 45.0593 40.2321 45.0928L44.7679 46.9072C44.8517 46.9407 44.8517 47.0593 44.7679 47.0928L40.2321 48.9072C40.1483 48.9407 40.1483 49.0593 40.2321 49.0928L45 51" FillRule="NonZero"/>
-        </Path.Data>
-      </Path>
-      <Path  Name="path6" Stroke="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}">
-        <Path.Data>
-          <PathGeometry Figures="M55 41L59.7679 42.9072C59.8517 42.9407 59.8517 43.0593 59.7679 43.0928L55.2321 44.9072C55.1483 44.9407 55.1483 45.0593 55.2321 45.0928L59.7679 46.9072C59.8517 46.9407 59.8517 47.0593 59.7679 47.0928L55.2321 48.9072C55.1483 48.9407 55.1483 49.0593 55.2321 49.0928L60 51" FillRule="NonZero"/>
-        </Path.Data>
-      </Path>
-      <Path  Name="path8" Stroke="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}">
-        <Path.Data>
-          <PathGeometry Figures="M70 41L74.7679 42.9072C74.8517 42.9407 74.8517 43.0593 74.7679 43.0928L70.2321 44.9072C70.1483 44.9407 70.1483 45.0593 70.2321 45.0928L74.7679 46.9072C74.8517 46.9407 74.8517 47.0593 74.7679 47.0928L70.2321 48.9072C70.1483 48.9407 70.1483 49.0593 70.2321 49.0928L75 51" FillRule="NonZero"/>
-        </Path.Data>
-      </Path>
-      <Rectangle  Canvas.Left="21" Canvas.Top="50" Width="57" Height="40" RadiusX="2" RadiusY="2" 
-                  Name="rect10" Fill="#FF607D8B" Effect="{DynamicResource MaterialDesignShadowDepth2}"/>
-      <Grid Effect="{DynamicResource MaterialDesignShadowDepth2}">
-        <Path  Name="path12" Fill="Gray" >
-          <Path.Data>
-            <PathGeometry Figures="M12 29H87V40C87 41.1046 86.1046 42 85 42H14C12.8954 42 12 41.1046 12 40V29Z" FillRule="NonZero"/>
-          </Path.Data>
-        </Path>
-        <Path  Name="path14" Fill="#FF9E9E9E">
-          <Path.Data>
-            <PathGeometry Figures="M12 14C12 12.8954 12.8954 12 14 12H85C86.1046 12 87 12.8954 87 14V29H12V14Z" FillRule="NonZero"/>
-          </Path.Data>
-        </Path>        
-      </Grid>
+             mc:Ignorable="d" Width="100" Height="100" Effect="{DynamicResource MaterialDesignShadowDepth1}">
 
-    </Canvas>
-  </Viewbox>
+	<Viewbox Stretch="Uniform">
+		<Canvas Name="svg16" Width="97" Height="100">
+			<Canvas.RenderTransform>
+				<TranslateTransform X="0" Y="0"/>
+			</Canvas.RenderTransform>
+			<Canvas.Resources/>
+			<Path Name="path2" StrokeThickness="1.27436" Stroke="#FF757575">
+				<Path.Data>
+					<PathGeometry Figures="M16.5667 36.9565L22.6426 39.3869C22.7495 39.4296 22.7495 39.5808 22.6426 39.6235L16.8625 41.9356C16.7556 41.9783 16.7556 42.1295 16.8625 42.1722L22.6426 44.4843C22.7495 44.527 22.7495 44.6782 22.6426 44.721L16.8625 47.033C16.7556 47.0758 16.7556 47.227 16.8625 47.2697L22.9384 49.7001" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Path Name="path4" StrokeThickness="1.27436" Stroke="#FF757575">
+				<Path.Data>
+					<PathGeometry Figures="M35.6819 36.9565L41.7579 39.3869C41.8647 39.4296 41.8647 39.5808 41.7579 39.6235L35.9777 41.9356C35.8709 41.9783 35.8709 42.1295 35.9777 42.1722L41.7579 44.4843C41.8647 44.527 41.8647 44.6782 41.7579 44.721L35.9777 47.033C35.8709 47.0758 35.8709 47.227 35.9777 47.2697L42.0537 49.7001" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Path Name="path6" StrokeThickness="1.27436" Stroke="#FF757575">
+				<Path.Data>
+					<PathGeometry Figures="M54.7974 36.9565L60.8734 39.3869C60.9802 39.4296 60.9802 39.5808 60.8734 39.6235L55.0932 41.9356C54.9864 41.9783 54.9864 42.1295 55.0932 42.1722L60.8734 44.4843C60.9802 44.527 60.9802 44.6782 60.8734 44.721L55.0932 47.033C54.9864 47.0758 54.9864 47.227 55.0932 47.2697L61.1692 49.7001" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Path Name="path8" StrokeThickness="1.27436" Stroke="#FF757575">
+				<Path.Data>
+					<PathGeometry Figures="M73.9126 36.9565L79.9886 39.3869C80.0954 39.4296 80.0954 39.5808 79.9886 39.6235L74.2084 41.9356C74.1016 41.9783 74.1016 42.1295 74.2084 42.1722L79.9886 44.4843C80.0954 44.527 80.0954 44.6782 79.9886 44.721L74.2084 47.033C74.1016 47.0758 74.1016 47.227 74.2084 47.2697L80.2844 49.7001" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Rectangle Canvas.Left="11.4692" Canvas.Top="48.4257" Width="72.6385" Height="50.9744" RadiusX="2.54872" RadiusY="2.54872" Name="rect10" Fill="#FF607D8B"/>
+			<Path Name="path12" Fill="#FF808080">
+				<Path.Data>
+					<PathGeometry Figures="M0 21.6641H95.577V35.6821C95.577 37.0897 94.4359 38.2308 93.0282 38.2308H2.54872C1.1411 38.2308 0 37.0897 0 35.6821V21.6641Z" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Path Name="path14" Fill="#FF9E9E9E">
+				<Path.Data>
+					<PathGeometry Figures="M0 2.54872C0 1.1411 1.1411 0 2.54872 0H93.0282C94.4358 0 95.577 1.1411 95.577 2.54872V21.6641H0V2.54872Z" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+		</Canvas>
+	</Viewbox>
 </UserControl>
