--- a/Prevu.Drawings/Machines/EXC_Air.xaml
+++ b/Prevu.Drawings/Machines/EXC_Air.xaml
@@ -5,13 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" 
-             Height="100" Width="100">
+             Height="44" Width="100">
     <Viewbox Stretch="Uniform">
         <Canvas Height="44" Width="100">
-            <local:VRC_WaterCollectingTank Height="44" Width="100">
-
-            </local:VRC_WaterCollectingTank>
-            <local:Agitator Height="31" Width="52" Margin="0" Canvas.Top="16" Canvas.Left="24"/>
+            <local:VRC_WaterCollectingTank Height="44" Width="100"/>
+            <local:Agitator Height="19" Width="52" Canvas.Top="25" Canvas.Left="23" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <Rectangle Height="8" Width="100" RenderTransformOrigin="0.5,0.5" Fill="#FF616161" RadiusX="2" RadiusY="2"/>
         </Canvas>
     </Viewbox>
