--- a/Prevu.Synoptics.V3001-COVERIS/G230.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/G230.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.G230" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="-4,-5,4,5">
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="750" Margin="69,0,0,0" VerticalAlignment="Center" Width="641" Visibility="Visible"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="750" Margin="69,0,0,0" VerticalAlignment="Center" Width="641" Visibility="Visible" d:IsLocked="True"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="887,274,0,0" VerticalAlignment="Top" Color="Air" Width="38" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="325-02-MA1">
             <Labels:Pipe.LayoutTransform>
                 <TransformGroup>
@@ -57,7 +57,7 @@
                 </TransformGroup>
             </Machines:STR_BatchReactor.RenderTransform>
         </Machines:STR_BatchReactor>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="539,246,0,0" VerticalAlignment="Top" Color="Water" Width="81" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="504,259,0,0" VerticalAlignment="Top" Color="Water" Width="119" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -188,7 +188,7 @@
             Margin="499,486,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="434,168,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="176" PipeHeight="Medium" StatusComponent="212-71-ECS1" Height="22">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="394,156,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="152" PipeHeight="Medium" StatusComponent="212-71-ECS1" Height="22">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -202,7 +202,7 @@
             Margin="397,317,0,0" 
             VerticalAlignment="Top" 
             ComponentName="212-01-MA1"/>
-        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="464,29,0,0" VerticalAlignment="Top" Width="116" Height="120" RenderTransformOrigin="0.5,0.5">
+        <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="412,29,0,0" VerticalAlignment="Top" Width="116" Height="120" RenderTransformOrigin="0.5,0.5">
             <Machines:MaterialInletOutlet.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -227,7 +227,7 @@
             Margin="408,604,0,0" 
             VerticalAlignment="Top" 
             ComponentName="230-03-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="539,291,0,0" VerticalAlignment="Top" Color="Water" Width="81" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-22-CV1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="504,291,0,0" VerticalAlignment="Top" Color="Water" Width="119" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="212-22-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -317,11 +317,10 @@
             ComponentName="320-01-MA1"/>
         <Rectangle HorizontalAlignment="Left" Height="31" Margin="262,262,0,0" Stroke="Black" VerticalAlignment="Top" Width="32" Fill="Gray"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="588,113,0,0" 
+            Margin="525,113,0,0" 
             VerticalAlignment="Top" 
             ComponentName="212-71-ECS1"/>
         <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="169,293,0,0" VerticalAlignment="Top" Width="152" />
-        <Rectangle HorizontalAlignment="Left" Height="72" Margin="473,241,0,0" Stroke="Black" VerticalAlignment="Top" Width="79" Fill="Gray"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Margin="1028,398,0,0" Stroke="#FFBDBDBD" VerticalAlignment="Top" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
         <Rectangle HorizontalAlignment="Left" Height="41" Margin="1140,388,0,0" Stroke="Black" VerticalAlignment="Top" Width="58" Fill="Gray"/>
         <Rectangle HorizontalAlignment="Left" Height="72" Margin="1019,167,0,0" Stroke="Black" VerticalAlignment="Top" Width="70" Fill="Gray"/>
@@ -331,7 +330,7 @@
             VerticalAlignment="Top" 
             JumpFromLabel="324-01-MA1" 
             JumpToLabel="326-21-CV1"/>
-        <Rectangle HorizontalAlignment="Left" Height="112" Margin="522,117,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="112" Margin="470,117,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -341,7 +340,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:External HorizontalAlignment="Left" Margin="411,144,0,0" VerticalAlignment="Top" Height="58" Width="59" RenderTransformOrigin="0.5,0.5">
+        <Machines:External HorizontalAlignment="Left" Margin="359,144,0,0" VerticalAlignment="Top" Height="58" Width="59" RenderTransformOrigin="0.5,0.5">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -407,10 +406,10 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="588,188,0,0" 
+            Margin="588,201,0,0" 
             VerticalAlignment="Top" 
             ComponentName="212-21-CV1"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="586,205,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="586,218,0,0" VerticalAlignment="Top" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
@@ -472,5 +471,6 @@
             Margin="108,708,0,0" 
             VerticalAlignment="Top" 
             ComponentName="227-01-EC1"/>
+        <Machines:ARF_Roll_Filter HorizontalAlignment="Left" Margin="447,207,0,0" VerticalAlignment="Top" Height="108" Width="104"/>
     </Grid>
 </UserControl>
